FIX: Use correct tab selector (data-ptab) to switch to Entries & Rentals after race entry

--- a/driver_portal.html
+++ b/driver_portal.html
@@ -3451,7 +3451,7 @@
                 // Stay on portal and switch to Entries tab to show updated status
                 setTimeout(() => {
                   // Click on Entries and Rentals tab to show the updated status
-                  const entriesTab = document.querySelector('[data-tab="entries"]');
+                  const entriesTab = document.querySelector('[data-ptab="payments"]');
                   if (entriesTab) {
                     entriesTab.click();
                   }
