--- a/admin.html
+++ b/admin.html
@@ -12,9 +12,9 @@
     }
 
     body {
-      font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
-      background: #1a1a1a;
-      color: #e0e0e0;
+      font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', sans-serif;
+      background: #f5f7fa;
+      color: #2c3e50;
     }
 
     .login-wrapper {
@@ -22,26 +22,28 @@
       align-items: center;
       justify-content: center;
       min-height: 100vh;
-      background: #0d0d0d;
+      background: linear-gradient(135deg, #667eea 0%, #764ba2 100%);
     }
 
     .login-box {
-      background: #2a2a2a;
+      background: white;
       padding: 40px;
-      border-radius: 8px;
+      border-radius: 12px;
       width: 100%;
       max-width: 400px;
-      border: 1px solid #404040;
+      border: none;
+      box-shadow: 0 10px 40px rgba(0, 0, 0, 0.2);
     }
 
     .login-box h1 {
-      color: #fff;
+      color: #2c3e50;
       margin-bottom: 8px;
       font-size: 28px;
+      font-weight: 700;
     }
 
     .login-box p {
-      color: #999;
+      color: #7f8c8d;
       margin-bottom: 30px;
       font-size: 14px;
     }
@@ -52,215 +54,238 @@
 
     .form-group label {
       display: block;
-      color: #e0e0e0;
+      color: #2c3e50;
       font-size: 14px;
       margin-bottom: 8px;
-      font-weight: 500;
+      font-weight: 600;
     }
 
     .form-group input {
       width: 100%;
       padding: 12px;
-      background: #1a1a1a;
-      border: 1px solid #404040;
-      border-radius: 4px;
-      color: #e0e0e0;
+      background: #f8f9fa;
+      border: 2px solid #e0e0e0;
+      border-radius: 6px;
+      color: #2c3e50;
       font-size: 14px;
+      transition: all 0.3s ease;
     }
 
     .form-group input:focus {
       outline: none;
-      border-color: #0066cc;
-      background: #242424;
+      border-color: #667eea;
+      background: white;
+      box-shadow: 0 0 0 3px rgba(102, 126, 234, 0.1);
     }
 
     .login-btn {
       width: 100%;
       padding: 12px;
-      background: #0066cc;
+      background: linear-gradient(135deg, #667eea 0%, #764ba2 100%);
       color: white;
       border: none;
-      border-radius: 4px;
+      border-radius: 6px;
       font-size: 14px;
       font-weight: 600;
       cursor: pointer;
-      transition: background 0.2s;
+      transition: all 0.3s ease;
     }
 
     .login-btn:hover {
-      background: #0052a3;
+      transform: translateY(-2px);
+      box-shadow: 0 5px 20px rgba(102, 126, 234, 0.4);
     }
 
     .error-message {
-      color: #ff6b6b;
+      color: #c0392b;
       margin-bottom: 20px;
       padding: 12px;
-      background: #3d2020;
-      border-radius: 4px;
-      border: 1px solid #cc3333;
+      background: #fadbd8;
+      border-radius: 6px;
+      border: 1px solid #c0392b;
       display: none;
-      font-size: 14px;
+      font-size: 13px;
     }
 
     /* Admin Dashboard */
     .admin-wrapper {
       display: none;
       min-height: 100vh;
-      background: #0d0d0d;
+      background: #f5f7fa;
     }
 
     .admin-header {
-      background: #1a1a1a;
-      border-bottom: 1px solid #404040;
-      padding: 20px;
+      background: white;
+      border-bottom: 1px solid #e0e0e0;
+      padding: 20px 30px;
       display: flex;
       justify-content: space-between;
       align-items: center;
       position: sticky;
       top: 0;
       z-index: 100;
+      box-shadow: 0 2px 8px rgba(0, 0, 0, 0.08);
     }
 
     .admin-header h1 {
-      color: #fff;
-      font-size: 24px;
+      color: #2c3e50;
+      font-size: 26px;
+      font-weight: 700;
+      margin: 0;
     }
 
     .logout-btn {
-      padding: 10px 20px;
-      background: #d32f2f;
+      padding: 8px 16px;
+      background: #e74c3c;
       color: white;
       border: none;
-      border-radius: 4px;
+      border-radius: 6px;
       cursor: pointer;
       font-weight: 600;
-      font-size: 14px;
+      font-size: 13px;
+      transition: all 0.3s ease;
     }
 
     .logout-btn:hover {
-      background: #b71c1c;
+      background: #c0392b;
+      transform: translateY(-2px);
+      box-shadow: 0 2px 8px rgba(231, 76, 60, 0.3);
     }
 
     .admin-tabs {
       display: flex;
-      gap: 10px;
-      padding: 0 20px;
-      border-bottom: 1px solid #404040;
-      background: #1a1a1a;
+      gap: 5px;
+      padding: 0 30px;
+      border-bottom: 1px solid #e0e0e0;
+      background: white;
       position: sticky;
-      top: 60px;
+      top: 62px;
       z-index: 50;
+      overflow-x: auto;
     }
 
     .tab-btn {
-      padding: 15px 20px;
-      background: transparent;
-      color: #999;
+      padding: 12px 20px;
+      background: none;
+      color: #7f8c8d;
       border: none;
       cursor: pointer;
       font-weight: 600;
       font-size: 14px;
       border-bottom: 3px solid transparent;
-      transition: all 0.2s;
+      transition: all 0.3s ease;
+      white-space: nowrap;
     }
 
     .tab-btn:hover {
-      color: #e0e0e0;
+      color: #667eea;
     }
 
     .tab-btn.active {
-      color: #0066cc;
-      border-bottom-color: #0066cc;
+      color: #667eea;
+      border-bottom-color: #667eea;
     }
 
     .admin-content {
-      padding: 20px;
-      max-width: 1600px;
+      padding: 30px;
+      max-width: 1800px;
       margin: 0 auto;
     }
 
     .filters-bar {
-      background: #1a1a1a;
-      padding: 15px;
+      background: white;
+      padding: 20px;
       border-radius: 8px;
-      margin-bottom: 20px;
-      border: 1px solid #404040;
+      margin-bottom: 24px;
+      border: 1px solid #e0e0e0;
       display: flex;
-      gap: 10px;
+      gap: 12px;
       flex-wrap: wrap;
+      box-shadow: 0 2px 4px rgba(0, 0, 0, 0.05);
     }
 
     .filters-bar input,
     .filters-bar select {
-      padding: 10px;
-      background: #2a2a2a;
-      border: 1px solid #404040;
-      border-radius: 4px;
-      color: #e0e0e0;
+      padding: 10px 12px;
+      background: #f8f9fa;
+      border: 1px solid #d0d0d0;
+      border-radius: 6px;
+      color: #2c3e50;
       font-size: 14px;
+      transition: all 0.3s ease;
+    }
+
+    .filters-bar input::placeholder {
+      color: #95a5a6;
     }
 
     .filters-bar input:focus,
     .filters-bar select:focus {
       outline: none;
-      border-color: #0066cc;
+      border-color: #667eea;
+      background: white;
+      box-shadow: 0 0 0 3px rgba(102, 126, 234, 0.1);
     }
 
     .search-btn {
       padding: 10px 20px;
-      background: #0066cc;
+      background: #667eea;
       color: white;
       border: none;
-      border-radius: 4px;
+      border-radius: 6px;
       cursor: pointer;
       font-weight: 600;
       font-size: 14px;
+      transition: all 0.3s ease;
     }
 
     .search-btn:hover {
-      background: #0052a3;
+      background: #5568d3;
+      transform: translateY(-2px);
+      box-shadow: 0 2px 8px rgba(102, 126, 234, 0.3);
     }
 
     .table-wrapper {
-      background: #1a1a1a;
+      background: white;
       border-radius: 8px;
-      border: 1px solid #404040;
+      border: 1px solid #e0e0e0;
       overflow-x: auto;
       overflow-y: auto;
-      max-height: 600px;
+      max-height: 700px;
+      box-shadow: 0 2px 8px rgba(0, 0, 0, 0.05);
     }
 
     table {
       width: 100%;
       border-collapse: collapse;
-      font-size: 11px;
+      font-size: 13px;
       min-width: 2000px;
     }
 
     th {
-      background: #242424;
-      padding: 6px 4px;
+      background: #f8f9fa;
+      padding: 12px 14px;
       text-align: left;
-      font-weight: 600;
-      color: #e0e0e0;
-      border-bottom: 1px solid #404040;
+      font-weight: 700;
+      color: #2c3e50;
+      border-bottom: 2px solid #e0e0e0;
       position: sticky;
       top: 0;
       white-space: nowrap;
-      height: 30px;
-      line-height: 1;
+      height: 44px;
+      line-height: 1.4;
     }
 
     td {
-      padding: 4px 4px;
-      border-bottom: 1px solid #303030;
-      color: #e0e0e0;
+      padding: 12px 14px;
+      border-bottom: 1px solid #f0f0f0;
+      color: #2c3e50;
       white-space: nowrap;
       overflow: hidden;
       text-overflow: ellipsis;
-      max-width: 120px;
-      height: 28px;
-      line-height: 1.2;
+      max-width: 150px;
+      height: 44px;
+      line-height: 1.4;
     }
 
     .editable-cell {
@@ -270,167 +295,153 @@
     }
 
     .editable-cell:hover {
-      background: #2a2a2a;
-      outline: 1px solid #0066cc;
+      background: #f0f0f0;
+      outline: 1px solid #667eea;
     }
 
     .edit-input {
       width: 100%;
-      padding: 2px 4px;
-      background: #1a1a1a;
-      border: 2px solid #0066cc;
-      color: #e0e0e0;
-      border-radius: 3px;
-      font-size: 11px;
+      padding: 6px 8px;
+      background: white;
+      border: 2px solid #667eea;
+      color: #2c3e50;
+      border-radius: 4px;
+      font-size: 13px;
+      font-family: inherit;
     }
 
     .edit-input:focus {
       outline: none;
-      border-color: #00aa00;
+      border-color: #5568d3;
+      box-shadow: 0 0 0 3px rgba(102, 126, 234, 0.1);
     }
 
     .edit-select {
       width: 100%;
-      padding: 2px 4px;
-      background: #1a1a1a;
-      border: 2px solid #0066cc;
-      color: #e0e0e0;
-      border-radius: 3px;
-      font-size: 11px;
+      padding: 6px 8px;
+      background: white;
+      border: 2px solid #667eea;
+      color: #2c3e50;
+      border-radius: 4px;
+      font-size: 13px;
+      font-family: inherit;
     }
 
     tr:hover {
-      background: #242424;
+      background: #f8f9fa;
     }
 
     .status-badge {
       display: inline-block;
-      padding: 4px 8px;
-      border-radius: 3px;
+      padding: 6px 10px;
+      border-radius: 20px;
       font-size: 12px;
-      font-weight: 600;
+      font-weight: 700;
+      text-transform: uppercase;
     }
 
     .status-approved {
-      background: #1b5e20;
-      color: #4caf50;
+      background: #d4edda;
+      color: #155724;
     }
 
     .status-pending {
-      background: #4d3a00;
-      color: #ffc107;
+      background: #fff3cd;
+      color: #856404;
     }
 
     .status-paid {
-      background: #0d47a1;
-      color: #42a5f5;
+      background: #cce5ff;
+      color: #004085;
     }
 
     .status-unpaid {
-      background: #b71c1c;
-      color: #ff6b6b;
+      background: #f8d7da;
+      color: #721c24;
     }
 
     .class-badge {
       display: inline-block;
-      padding: 2px 6px;
-      border-radius: 3px;
-      font-size: 10px;
-      font-weight: 600;
+      padding: 4px 8px;
+      border-radius: 4px;
+      font-size: 11px;
+      font-weight: 700;
       color: white;
       white-space: nowrap;
     }
 
     .class-cadet {
-      background: #d32f2f;
+      background: #e74c3c;
     }
 
     .class-mini-rok-u10 {
-      background: #f57c00;
-    }
-
-    .action-badge {
-      display: inline-block;
-      padding: 4px 8px;
-      border-radius: 3px;
-      font-size: 11px;
-      font-weight: 600;
-      white-space: nowrap;
-    }
-
-    .action-badge {
-      background: #1a3a52;
-      color: #42a5f5;
+      background: #f39c12;
     }
 
     .class-mini-rok {
-      background: #fbc02d;
-      color: #000;
+      background: #f1c40f;
+      color: #2c3e50;
     }
 
     .class-ok-j {
-      background: #388e3c;
+      background: #27ae60;
     }
 
     .class-ok-n {
-      background: #1976d2;
+      background: #3498db;
     }
 
     .class-kz2 {
-      background: #7b1fa2;
+      background: #9b59b6;
     }
 
     .action-buttons {
       display: flex;
-      gap: 5px;
+      gap: 6px;
       flex-wrap: wrap;
     }
 
     .action-btn {
-      padding: 6px 10px;
+      padding: 6px 12px;
       font-size: 12px;
       border: none;
-      border-radius: 3px;
+      border-radius: 4px;
       cursor: pointer;
       font-weight: 600;
-      transition: all 0.2s;
+      transition: all 0.3s ease;
     }
 
     .edit-btn {
-      background: #0066cc;
+      background: #667eea;
       color: white;
     }
 
     .edit-btn:hover {
-      background: #0052a3;
+      background: #5568d3;
+      transform: translateY(-1px);
+      box-shadow: 0 2px 6px rgba(102, 126, 234, 0.3);
     }
 
     .delete-btn {
-      background: #dc2626;
+      background: #e74c3c;
       color: white;
-      margin-left: 8px;
     }
 
     .delete-btn:hover {
-      background: #b91c1c;
+      background: #c0392b;
+      transform: translateY(-1px);
+      box-shadow: 0 2px 6px rgba(231, 76, 60, 0.3);
     }
 
     .reset-btn {
-      background: #ff9800;
+      background: #f39c12;
       color: white;
     }
 
     .reset-btn:hover {
-      background: #e68900;
-    }
-
-    .delete-btn {
-      background: #dc3545;
-      color: white;
-    }
-
-    .delete-btn:hover {
-      background: #c82333;
+      background: #d68910;
+      transform: translateY(-1px);
+      box-shadow: 0 2px 6px rgba(243, 156, 18, 0.3);
     }
 
     .modal {
@@ -440,7 +451,7 @@
       left: 0;
       width: 100%;
       height: 100%;
-      background: rgba(0, 0, 0, 0.7);
+      background: rgba(0, 0, 0, 0.5);
       z-index: 1000;
       align-items: center;
       justify-content: center;
@@ -451,96 +462,106 @@
     }
 
     .modal-content {
-      background: #1a1a1a;
+      background: white;
       padding: 30px;
-      border-radius: 8px;
+      border-radius: 12px;
       max-width: 500px;
       width: 90%;
-      border: 1px solid #404040;
+      border: none;
+      box-shadow: 0 10px 40px rgba(0, 0, 0, 0.15);
       max-height: 90vh;
       overflow-y: auto;
     }
 
     .modal-content h2 {
-      margin-bottom: 20px;
-      color: #fff;
+      margin-bottom: 24px;
+      color: #2c3e50;
       font-size: 20px;
+      font-weight: 700;
     }
 
     .form-group input,
     .form-group select {
       width: 100%;
-      padding: 10px;
-      background: #2a2a2a;
-      border: 1px solid #404040;
-      border-radius: 4px;
-      color: #e0e0e0;
+      padding: 10px 12px;
+      background: #f8f9fa;
+      border: 1px solid #d0d0d0;
+      border-radius: 6px;
+      color: #2c3e50;
       font-size: 14px;
+      transition: all 0.3s ease;
     }
 
     .form-group input:focus,
     .form-group select:focus {
       outline: none;
-      border-color: #0066cc;
+      border-color: #667eea;
+      background: white;
+      box-shadow: 0 0 0 3px rgba(102, 126, 234, 0.1);
     }
 
     .modal-buttons {
       display: flex;
       gap: 10px;
       justify-content: flex-end;
-      margin-top: 20px;
+      margin-top: 24px;
     }
 
     .modal-buttons button {
       padding: 10px 20px;
       border: none;
-      border-radius: 4px;
+      border-radius: 6px;
       cursor: pointer;
       font-weight: 600;
       font-size: 14px;
+      transition: all 0.3s ease;
     }
 
     .save-btn {
-      background: #4caf50;
+      background: #27ae60;
       color: white;
     }
 
     .save-btn:hover {
-      background: #388e3c;
+      background: #229954;
+      transform: translateY(-2px);
+      box-shadow: 0 2px 8px rgba(39, 174, 96, 0.3);
     }
 
     .cancel-btn {
-      background: #404040;
-      color: #e0e0e0;
+      background: #ecf0f1;
+      color: #2c3e50;
     }
 
     .cancel-btn:hover {
-      background: #505050;
+      background: #d5dbdb;
+      transform: translateY(-2px);
     }
 
     /* Message Styles */
     .message-item {
       padding: 16px;
-      border-left: 4px solid #404040;
-      background: #242424;
+      border-left: 4px solid #e0e0e0;
+      background: white;
       margin-bottom: 12px;
-      border-radius: 4px;
-      transition: all 0.2s;
+      border-radius: 6px;
+      transition: all 0.3s ease;
+      border: 1px solid #e0e0e0;
     }
 
     .message-item.msg-unread {
-      border-left-color: #ff6b6b;
-      background: #2a2424;
+      border-left-color: #667eea;
+      background: #f0f3ff;
     }
 
     .message-item.msg-read {
-      border-left-color: #404040;
-      background: #1a1a1a;
+      border-left-color: #e0e0e0;
+      background: #f8f9fa;
       opacity: 0.8;
     }
 
     .message-item:hover {
-      background: #2a2a2a;
+      box-shadow: 0 2px 8px rgba(0, 0, 0, 0.08);
     }
 
     .message-header {
@@ -552,15 +573,16 @@
 
     .message-body {
       word-break: break-word;
-      line-height: 1.5;
-      color: #d0d0d0;
+      line-height: 1.6;
+      color: #555;
       white-space: pre-wrap;
+      margin-top: 8px;
     }
 
     .loading {
       text-align: center;
       padding: 40px;
-      color: #666;
+      color: #95a5a6;
     }
 
     .toast {
@@ -568,19 +590,26 @@
       top: 20px;
       right: 20px;
       padding: 15px 20px;
-      border-radius: 4px;
+      border-radius: 8px;
       color: white;
       z-index: 2000;
       animation: slideIn 0.3s ease-out;
       font-size: 14px;
+      font-weight: 600;
+      box-shadow: 0 4px 12px rgba(0, 0, 0, 0.15);
     }
 
     .toast.success {
-      background: #4caf50;
+      background: #27ae60;
     }
 
     .toast.error {
-      background: #d32f2f;
+      background: #e74c3c;
+    }
+
+    .row-inactive {
+      background: #fff3cd !important;
+      opacity: 0.8;
     }
 
     @keyframes slideIn {
@@ -1023,8 +1052,13 @@
       if (password === ADMIN_PASSWORD) {
         const loginWrapper = document.getElementById('loginWrapper');
         const adminWrapper = document.getElementById('adminWrapper');
-        if (loginWrapper) loginWrapper.style.display = 'none';
+      if (loginWrapper) loginWrapper.style.display = 'none';
         if (adminWrapper) adminWrapper.style.display = 'block';
+        // Clear search fields and load all drivers
+        document.getElementById('searchEmail').value = '';
+        document.getElementById('searchName').value = '';
+        document.getElementById('filterStatus').value = '';
+        document.getElementById('filterPaid').value = '';
         loadDrivers();
       } else {
         const errorMsg = document.getElementById('errorMessage');
