--- a/officials.html
+++ b/officials.html
@@ -4,6 +4,16 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>NATS Officials Portal</title>
+  
+  <!-- PWA Meta Tags -->
+  <meta name="theme-color" content="#e74c3c">
+  <meta name="description" content="ROK Cup South Africa - Officials Portal for race management">
+  <meta name="apple-mobile-web-app-capable" content="yes">
+  <meta name="apple-mobile-web-app-status-bar-style" content="black-translucent">
+  <meta name="apple-mobile-web-app-title" content="ROK Officials">
+  <link rel="manifest" href="/manifest.json">
+  <link rel="apple-touch-icon" href="/icons/icon-192.png">
+
   <style>
     * {
       margin: 0;
