Production deployment: Titan Command portal, admin diagnostics, updated portals, document system, and bug fixes

--- a/officials.html
+++ b/officials.html
@@ -8,10 +8,12 @@
   <!-- PWA Meta Tags -->
   <meta name="theme-color" content="#e74c3c">
   <meta name="description" content="ROK Cup South Africa - Officials Portal for race management">
+  <meta name="mobile-web-app-capable" content="yes">
   <meta name="apple-mobile-web-app-capable" content="yes">
   <meta name="apple-mobile-web-app-status-bar-style" content="black-translucent">
   <meta name="apple-mobile-web-app-title" content="ROK Officials">
   <link rel="manifest" href="/manifest.json">
+  <link rel="icon" type="image/png" href="/rok-cup-favicon.png" />
   <link rel="apple-touch-icon" href="/icons/icon-192.png">
 
   <style>
