--- a/admin_audit_log.html
+++ b/admin_audit_log.html
@@ -4,6 +4,8 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>NATS Admin - Audit Log & Database</title>
+  <link rel="icon" type="image/png" href="/rok-cup-favicon.png" />
+  <link rel="apple-touch-icon" href="/rok-cup-favicon.png" />
   <style>
     * {
       margin: 0;
