Fix mobile pull-to-refresh interference with scrolling - Add overscroll-behavior and touch-action CSS properties to prevent native pull-to-refresh from interfering with normal scrolling on mobile devices - Update custom pull-to-refresh logic in driver_portal to only trigger when pulling down from top - Apply fixes across all main HTML pages (index, driver_portal, admin, clerk, officials, admin_diagnostics)

--- a/admin_diagnostics.html
+++ b/admin_diagnostics.html
@@ -11,6 +11,8 @@
       margin: 20px auto;
       padding: 20px;
       background: #f9fafb;
+      overscroll-behavior-y: none;
+      touch-action: pan-y;
     }
     h1 {
       color: #111827;
