--- a/clerk.html
+++ b/clerk.html
@@ -24,6 +24,8 @@
       min-height: 100vh;
       min-height: -webkit-fill-available;
       overflow-x: hidden;
+      overscroll-behavior-y: none;
+      touch-action: pan-y;
     }
     
     .header {
