--- a/index.html
+++ b/index.html
@@ -779,6 +779,8 @@
     
     html, body {
       height: 100%;
+      overscroll-behavior-y: none;
+      touch-action: pan-y;
     }
 
     body {
@@ -1426,6 +1428,8 @@
       display: flex;
       flex-direction: column;
       position: relative;
+      overscroll-behavior-y: contain;
+      touch-action: pan-y;
     }
 
     .info-tab-content {
