--- a/officials.html
+++ b/officials.html
@@ -27,6 +27,8 @@
       font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', sans-serif;
       background: #f5f7fa;
       color: #2c3e50;
+      overscroll-behavior-y: none;
+      touch-action: pan-y;
     }
 
     .login-wrapper {
