Fix horizontal scrolling on mobile - Add overflow-x: hidden to html/body elements to prevent horizontal scroll - Change modal width from 100vw to 100% to prevent overflow on mobile devices - Apply fixes across all main pages (index, driver_portal, admin, officials, admin_diagnostics)

--- a/admin_diagnostics.html
+++ b/admin_diagnostics.html
@@ -13,6 +13,7 @@
       background: #f9fafb;
       overscroll-behavior-y: none;
       touch-action: pan-y;
+      overflow-x: hidden;
     }
     h1 {
       color: #111827;
