--- a/officials.html
+++ b/officials.html
@@ -29,6 +29,7 @@
       color: #2c3e50;
       overscroll-behavior-y: none;
       touch-action: pan-y;
+      overflow-x: hidden;
     }
 
     .login-wrapper {
