--- a/admin.html
+++ b/admin.html
@@ -19,6 +19,7 @@
       color: #2c3e50;
       overscroll-behavior-y: none;
       touch-action: pan-y;
+      overflow-x: hidden;
     }
 
     .login-wrapper {
