--- a/index.html
+++ b/index.html
@@ -781,6 +781,7 @@
       height: 100%;
       overscroll-behavior-y: none;
       touch-action: pan-y;
+      overflow-x: hidden;
     }
 
     body {
@@ -2069,7 +2070,7 @@
       }
 
       .modal {
-        width: 100vw;
+        width: 100%;
         max-height: 100vh;
         border-radius: 0;
       }
@@ -3358,7 +3359,7 @@ body[data-season="spring"] .info-section-select {
     body{padding-bottom:96px;}
 
       .modal {
-        width: 100vw;
+        width: 100%;
         max-height: 100vh;
         min-height: 100vh;
         border-radius: 0;
