--- a/driver_portal.html
+++ b/driver_portal.html
@@ -2168,6 +2168,17 @@
       .table td::before {
         font-size: 10px;
       }
+
+      /* Prevent horizontal overflow on small screens */
+      * {
+        max-width: 100%;
+        word-wrap: break-word;
+        overflow-wrap: break-word;
+      }
+
+      div, section, article {
+        max-width: 100vw;
+      }
     }
   </style>
 </head>
@@ -3209,7 +3220,8 @@
     // Run auto-login on page load
     window.addEventListener('DOMContentLoaded', () => {
       attemptAutoLogin();
-      initPullToRefresh();
+      // Pull-to-refresh disabled to prevent scrolling interference
+      // initPullToRefresh();
     });
 
     // Pull-to-refresh functionality for mobile
@@ -4276,7 +4288,7 @@
           const avgPoints = season.races_completed > 0 ? (season.total_points / season.races_completed).toFixed(1) : '0.0';
           
           return `
-            <div style="flex: 1; min-width: 200px; padding: 20px; background: linear-gradient(135deg, #fef3c7 0%, #fde68a 100%); border-radius: 8px; border: 2px solid #f59e0b; box-shadow: 0 4px 12px rgba(245, 158, 11, 0.3);">
+            <div style="flex: 1; min-width: 0; max-width: 100%; padding: 20px; background: linear-gradient(135deg, #fef3c7 0%, #fde68a 100%); border-radius: 8px; border: 2px solid #f59e0b; box-shadow: 0 4px 12px rgba(245, 158, 11, 0.3);">
               <div style="font-size: 28px; font-weight: 800; color: #92400e; margin-bottom: 4px;">${escapeHtml(season.total_points || 0)}</div>
               <div style="font-size: 11px; font-weight: 700; color: #b45309; text-transform: uppercase; letter-spacing: 0.5px; margin-bottom: 12px;">Total Points</div>
               <div style="display: flex; justify-content: space-between; padding-top: 12px; border-top: 1px solid #fbbf2480;">
