feat: Beautiful race ticket emails with SVG barcodes and sender name 'The ROK Cup'
- Added generateCode39SVG() for email-safe barcodes (no native dependencies)
- Generate ALL tickets upfront (engine, tyres, transponder, fuel) before PayFast redirect
- Beautiful branded ticket templates: race entry, Vortex engine, LeVanto tyres, MyLaps transponder, fuel
- PayFast webhook preserves existing ticket references (no regeneration)
- Email sender name 'The ROK Cup' for all race communications
- Driver portal passes selectedItems parameter to backend
- Admin red checkbox label for cancelled entries
- Comprehensive entry/payment system audit documentation

--- a/driver_portal.html
+++ b/driver_portal.html
@@ -6647,8 +6647,9 @@
               const amount = totalPrice.replace('R', '').replace(/\s/g, '').replace(',', '.').trim();
               console.log('🔍 Amount after cleaning:', amount);
               toast('info', 'Redirecting to PayFast payment...');
-              // Redirect to PayFast payment with driver email, event, and driver ID
-              window.location.href = '/api/initiateRacePayment?class=' + encodeURIComponent(driverClass) + '&amount=' + amount + '&email=' + encodeURIComponent(currentEmail) + '&eventId=' + encodeURIComponent(window.selectedEventId) + '&driverId=' + encodeURIComponent(window.currentDriverId);
+              // Redirect to PayFast payment with driver email, event, driver ID, and selected items
+              const itemsParam = encodeURIComponent(JSON.stringify(selectedItems));
+              window.location.href = '/api/initiateRacePayment?class=' + encodeURIComponent(driverClass) + '&amount=' + amount + '&email=' + encodeURIComponent(currentEmail) + '&eventId=' + encodeURIComponent(window.selectedEventId) + '&driverId=' + encodeURIComponent(window.currentDriverId) + '&items=' + itemsParam;
             }
           }
         });
