Fix critical race entry items bug + admin tools + UX improvements
CRITICAL BUG FIXES:
- Fixed double-decode bug in items parameter (server.js L3418)
  * Express auto-decodes query params, removed redundant decodeURIComponent()
  * Was causing entry_items to be lost during payment flow
- Fixed PayFast webhook overwriting entry_items (server.js L4593-4615)
  * Webhook now PRESERVES existing entry_items from pending entry
  * Previously reconstructed from item_description which lacked details
- Pre-check required items in frontend (driver_portal.html L6391)
  * Engine Rental and Controlled Fuel now checked by default
  * Prevents empty selectedItems being sent to server

ADMIN FEATURES:
- New admin modal to update entry items and resend tickets (admin.html L1571-1636)
  * Checkboxes for: Race Entry Fee (R2,950), Engine (R6,500), Tyres (R4,730), Transponder (R250), Fuel (R720)
  * Real-time total calculation
  * Updates database and sends email with all selected tickets
- New /api/updateAndResendTickets endpoint (server.js L5502-5699)
- Admin race entries list now refreshes after sending tickets (admin.html L2455)
- Added backward compatibility for engine column check (server.js L5285-5291)

DRIVER PORTAL UX:
- Changed default tab to 'Entries & Rentals' (driver_portal.html L3924)
- Added refresh button to Payment History (driver_portal.html L2724)
- Tab labels now white bold text (admin.html L693, L695)

TESTING:
- All items now parse correctly (Engine, Fuel, Tyres, Transponder)
- Ticket references generated successfully (ENG, TYR, TX, GAS prefixes)
- Tested with R15,150 entry - all 4 items processed

--- a/titan_command.html
+++ b/titan_command.html
@@ -1143,7 +1143,10 @@
                 <label>Amount:</label>
                 <span>R${entry.amount_paid || '0'}</span>
               </div>
-              <button class="edit-btn" onclick='openEntryEditModal(${JSON.stringify(entry).replace(/'/g, "&#39;")})'>EDIT</button>
+              <div style="display: flex; gap: 8px; margin-top: 12px;">
+                <button class="edit-btn" onclick='openEntryEditModal(${JSON.stringify(entry).replace(/'/g, "&#39;")})' style="flex: 1;">EDIT</button>
+                <button class="edit-btn" onclick='resendTicketEmail("${entry.entry_id}")' style="flex: 1; background: #3b82f6;">📧 RESEND TICKETS</button>
+              </div>
             </div>
           `).join('');
         } else {
@@ -1484,6 +1487,39 @@
       } catch (error) {
         console.error('Error updating entry:', error);
         alert('❌ Failed to update entry:\n\n' + error.message);
+      }
+    }
+
+    // Resend Ticket Email
+    async function resendTicketEmail(entryId) {
+      if (!entryId) {
+        alert('❌ Error: Entry ID not found');
+        return;
+      }
+
+      if (!confirm('📧 Resend race tickets email?\n\nThis will:\n• Generate any missing ticket references\n• Send email with ALL tickets (race, engine, tyres, transponder, fuel)\n• Update the database with new references\n\nContinue?')) {
+        return;
+      }
+
+      try {
+        const response = await fetch('/api/sendRaceTicketsEmail', {
+          method: 'POST',
+          headers: { 'Content-Type': 'application/json' },
+          body: JSON.stringify({ race_entry_id: entryId })
+        });
+
+        const data = await response.json();
+
+        if (data.success) {
+          alert('✅ Race tickets email sent successfully!\n\n' + 
+                'All tickets have been emailed to the driver.\n' +
+                'Missing ticket references were generated and saved.');
+        } else {
+          throw new Error(data.error?.message || 'Failed to send email');
+        }
+      } catch (error) {
+        console.error('Error resending tickets:', error);
+        alert('❌ Failed to resend tickets:\n\n' + error.message);
       }
     }
 
